 - Fixed an instance where NPC.maxSpawns was incorrectly referenced in favor of NPC.defaultMaxSpawns
 - Chests are ignored from kill tile abuse
 - Added /reply (/r) to reply to a /whisper
 - Fixed /broadcast spacing
 - User names and passwords are now accepted. Passwords are hashed with SHA512
 - Added MaximumLoginAttempts to configuration
 - Added /tphere * and /tphere all
 
Changes in API release 2.0.0.0:
 - Added update checker.

Changes in API release 1.8.0.0:
 - Added permissions system for managing different levels of admins
 -- Added one time auth system for new permissions. When you start the server and load the map, you get a one time auth code. Use /auth <code> to become superadmin.
 - Check the wiki on Github for more information on Permissions.
 - Fixed BanExplosives not doing anything.
 - All ban lists have been consolidated into one file, where reasons, IPs, and player names are stored together.
 - Fixed spawnrate and max spawns

Changes in API release 1.6.0.0:
 - Added spawn protection
 - Fixed numerous bugs
 - Added a few commands

Changes in API release 1.5.0.1:
 - Fixed cheat detection

Changes in API release 1.5.0.0:
 - Added /time
 - Added /kill <player>
 - Fixed /item
 - Added /slap <player> [dmg]
 - Added broadcast event for kill tile abuse
 - Fixed teleport somewhat
 - More cheat detection
 - Extended new cheat protection to mana
 - Update player exploit patched
 - Fixed /spawn
 - Made /invasion a toggle

Changes in API release 1.4.0.0:
 - The configuration file is now located at config.json
 - Something else.

Changes in API release 1.3.0.1:
 - Re-coded the entire command system
 - Re-coded the help command
 - Implemented what seems to be the most recurring blacklist ever

Changes in API release 1.3.0.0:
 - Added /maxspawns
 - Added /spawnrate
 - Resetup the configuration file to read spawn rate information.
 - Patched the ability for clients to spawn NPCs
 - Patched the ability for clients to rewrite the server through SendSection